--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -216,14 +216,14 @@
                         <i class="bi bi-briefcase-fill me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Vendor Quoting</span>
                     </a>
-                    <!-- <a href="#" data-app="vacation" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
+                    <a href="#" data-app="vacation" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
                         <i class="bi bi-calendar-check me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Vacation Requests</span>
                     </a>
                     <a href="../qv_dash_access/quickview_access.html" target="app-frame" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
                         <i class="bi bi-graph-up me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Quickview Access</span>
-                    </a> -->
+                    </a>
                     <a href="#" data-app="rfq-gen" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
                         <i class="bi bi-file-earmark-text me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>RFQ Gen</span>
